--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,23 @@
   "bugs": {
     "url": "https://github.com/katjanakosic/gendev-messenger-challenge/issues"
   },
-  "homepage": "https://github.com/katjanakosic/gendev-messenger-challenge#readme"
+  "homepage": "https://github.com/katjanakosic/gendev-messenger-challenge#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.1.0",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
+  }
 }
