--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/katjanakosic/gendev-messenger-challenge#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
