--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=3001
 MONGO_URI=mongodb+srv://katjanakosic:HCWv7LKD6FUteB5u@cluster0.ppogtma.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=jwtsecret
