--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/tooltip": "^2.3.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
