--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/katjanakosic/gendev-messenger-challenge.git"
+    "build": "npm-run-all lint format clean && tsc",
+    "clean": "rimraf dist",
+    "start": "nodemon --exec ts-node src/server.ts",
+    "format": "npx prettier --check .",
+    "lint": "eslint ."
   },
   "author": "Katjana Kosic",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/katjanakosic/gendev-messenger-challenge/issues"
-  },
-  "homepage": "https://github.com/katjanakosic/gendev-messenger-challenge#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
