--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "react-scrollable-feed": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
