--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "socket.io-client": "^4.7.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
